; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_AttachThreadInput.c_get_iwnd.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_AttachThreadInput.c_get_iwnd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@data = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @get_iwnd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_iwnd(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @data, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %4, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %44

11:                                               ; preds = %1
  %12 = load i64, i64* %3, align 8
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @data, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i64 1
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp eq i64 %12, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %44

19:                                               ; preds = %11
  %20 = load i64, i64* %3, align 8
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @data, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 2
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp eq i64 %20, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %19
  store i32 2, i32* %2, align 4
  br label %44

27:                                               ; preds = %19
  %28 = load i64, i64* %3, align 8
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** @data, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i64 3
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = icmp eq i64 %28, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %27
  store i32 3, i32* %2, align 4
  br label %44

35:                                               ; preds = %27
  %36 = load i64, i64* %3, align 8
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** @data, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i64 4
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = icmp eq i64 %36, %40
  br i1 %41, label %42, label %43

42:                                               ; preds = %35
  store i32 4, i32* %2, align 4
  br label %44

43:                                               ; preds = %35
  store i32 -1, i32* %2, align 4
  br label %44

44:                                               ; preds = %43, %42, %34, %26, %18, %10
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
